--- a/script/install
+++ b/script/install
@@ -8,3 +8,5 @@ cd "$(dirname $0)"/..
 
 # find the installers and run them iteratively
 find . -name install.sh | while read installer ; do sh -c "${installer}" ; done
+
+echo "The read prompts in osx/install.sh don't work inside script/install. For now, run osx/install directly"
